--- a/Cluster/Vagrantfile
+++ b/Cluster/Vagrantfile
@@ -20,7 +20,7 @@ $virtualbox_cpus = 1
 $provision_script = <<SCRIPT
     mv /tmp/user-data/* /var/lib/coreos-vagrant/ && \
     find /home/core/* -name '*.sh' -type f -exec chmod 0755 '{}' ';' && \
-    chmod 0755 /home/core/opt/bin/* && mkdir -p /opt/bin && mv /home/core/opt/bin/* /opt/bin/ 
+    chmod 0755 /home/core/opt/bin/* && mkdir /opt && cp -r /home/core/opt/* /opt/
 SCRIPT
 
 Vagrant.configure("2") do |config|
@@ -39,10 +39,8 @@ Vagrant.configure("2") do |config|
             end
 
             # sync files
-            config.vm.synced_folder "../Controller/bin", "/home/core/bin"
-            config.vm.synced_folder "../Controller/opt/bin", "/home/core/opt/bin"
-            config.vm.synced_folder "../Controller/images", "/home/core/images"
-            config.vm.synced_folder "../Controller/inaetics-demo/images", "/home/core/inaetics-demo/images"
+            config.vm.synced_folder "../Controller/opt", "/home/core/opt"
+            config.vm.synced_folder "../Controller/images/all", "/home/core/images/all"
             config.vm.synced_folder "../Controller/inaetics-demo/bundles", "/home/core/bundles"
             config.vm.synced_folder "user-data", "/tmp/user-data"
             config.vm.provision :shell, :inline => $provision_script
