provision the ACE bundles to the controller node only and mount them via NFS in the provisioning container

--- a/Controller/user-data/coreos-k8s.yaml
+++ b/Controller/user-data/coreos-k8s.yaml
@@ -20,8 +20,8 @@ coreos:
       content: |
         [Unit]
         Description=INAETICS demonstrator Kubernetes services and controllers
-        Requires=docker-registry.service kubernetes.service
-        After=docker-registry.service kubernetes.service
+        Requires=docker-registry.service kubernetes.service rpc-mountd.service nfsd.service
+        After=docker-registry.service kubernetes.service rpc-mountd.service nfsd.service
         
         [Service]
         Type=oneshot
