--- a/Controller/Vagrantfile
+++ b/Controller/Vagrantfile
@@ -41,6 +41,7 @@ Vagrant.configure("2") do |config|
         config.vm.synced_folder "opt", "/home/core/opt"
         config.vm.synced_folder "k8s", "/home/core/k8s"
         config.vm.synced_folder "images", "/home/core/images"
+        config.vm.synced_folder "inaetics-demo/bundles", "/home/core/bundles"
         config.vm.synced_folder "user-data", "/tmp/user-data"
         config.vm.provision :shell, :inline => $provision_script
     end
