--- a/Controller/k8s/manifests/controller/kube-apiserver.yaml
+++ b/Controller/k8s/manifests/controller/kube-apiserver.yaml
@@ -15,6 +15,7 @@ spec:
       - --etcd_servers=http://172.17.8.20:2379
       - --allow-privileged=true
       - --service-cluster-ip-range=10.3.0.0/16
+      - --service-node-port-range=80-99
       - --secure_port=443
       - --insecure-port=10080
       - --advertise-address=172.17.8.20
