--- a/Controller/Vagrantfile
+++ b/Controller/Vagrantfile
@@ -40,7 +40,8 @@ Vagrant.configure("2") do |config|
         # sync local directories
         config.vm.synced_folder "opt", "/home/core/opt"
         config.vm.synced_folder "k8s", "/home/core/k8s"
-        config.vm.synced_folder "images", "/home/core/images"
+        config.vm.synced_folder "images/all", "/home/core/images/all"
+        config.vm.synced_folder "images/controller", "/home/core/images/controller"
         config.vm.synced_folder "inaetics-demo", "/home/core/inaetics-demo"
         config.vm.synced_folder "user-data", "/tmp/user-data"
         config.vm.provision :shell, :inline => $provision_script
