some fixes: hyperkube and pause version numbers, removed unneeded kubelet config on controller

--- a/Controller/user-data/coreos-k8s.yaml
+++ b/Controller/user-data/coreos-k8s.yaml
@@ -10,7 +10,7 @@ coreos:
         After=etcd2.service docker-load.service
         
         [Service]
-        ExecStart=/usr/bin/kubelet --api_servers=127.0.0.1:10080 --register-node=false --allow-privileged=true --config=/home/core/k8s/manifests/controller --hostname-override=$public_ipv4 --logtostderr=true --v=3
+        ExecStart=/usr/bin/kubelet --api_servers=127.0.0.1:10080 --register-node=false --allow-privileged=true --config=/home/core/k8s/manifests/controller --logtostderr=true --v=3
         ExecStartPost=/opt/bin/create-k8s-env.sh
         Restart=always
         RestartSec=10
